completed exercises on my own

--- a/inline_js.html
+++ b/inline_js.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    const name = "audrey";
-    console.log(name);
+    const name = "Hello from Inline Javascript!"
+    console.log(name)
 </script>
 
 </body>
