--- a/debugging-exercise.html
+++ b/debugging-exercise.html
@@ -11,7 +11,7 @@
 <script>
   "use strict";
 
-//  TODO Help! When I run this code in the browser, I don't see an alert. What's wrong???
+//  Help! When I run this code in the browser, I don't see an alert. What's wrong???
 //call the function after declaring!
 /**
   function alertHowdy() {
@@ -20,7 +20,7 @@
 alertHowdy();
  */
 
-  // TODO Help! I'm getting undefined in this alert. What's wrong???
+  // Help! I'm getting undefined in this alert. What's wrong???
 /**
   let num1 = 5;
   let num2 = 2;
@@ -30,7 +30,7 @@ alertHowdy();
  console.log(addTwoNumbers(num1, num2));
  */
 
-  // TODO Help! Why is this always logging the wrong message?
+  //Help! Why is this always logging the wrong message?
 
 /**
 let punctuation = ['!', '.', '?',','];
@@ -53,7 +53,7 @@ let punctuation = ['!', '.', '?',','];
   console.log(returnPunctuationMsg('!'));
 */
 
-  // TODO Help! Why is this always showing me that the input is seven?
+  //Help! Why is this always showing me that the input is seven?
 
 /**
   function isSeven(num) {
@@ -67,7 +67,7 @@ let punctuation = ['!', '.', '?',','];
   isSeven(5);
 */
 
-  // TODO Help! Why doesn't this log 4???
+  // Help! Why doesn't this log 4???
 
 /**
   function returnTwo() {
@@ -77,7 +77,7 @@ let punctuation = ['!', '.', '?',','];
   console.log(returnTwo() + returnTwo());
 */
 
-  // TODO Help! Why does it not matter what I enter, it always logs the same message!
+  // Help! Why does it not matter what I enter, it always logs the same message!
 
 /**
   function logAdminIn(isAdmin) {
