completed june 5th morning warm up

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -17,20 +17,36 @@
     Examples:
 */
 
-//testing the (function(userInput), expected outcome);
-  console.log(addTen(0), 10); // returns 10
-  console.log(addTen(10), 20);// returns 20
-  console.log(addTen('bob'), false); // returns false
+// //testing the (function(userInput), expected outcome);
+//   console.log(addTen(0), 10); // returns 10
+//   console.log(addTen(10), 20);// returns 20
+//   console.log(addTen('bob'), false); // returns false
+//
+//   function addTen(userInput) {
+//     if (typeof userInput === 'number') {
+//    return userInput + 10;
+//     } else {
+//       return false;
+//     }
+//   }
+//
+//
 
-  function addTen(userInput) {
-    if (typeof userInput === 'number') {
-   return userInput + 10;
-    } else {
-      return false;
-    }
-  }
-
-
+  //june 5th, 2023. Monday
+// function makeUpperCase(input){
+//   if(typeof input === "string") {
+//     return input.toUpperCase();
+//     }else {
+//     return false
+//     }
+//   }
+//
+//   console.log(makeUpperCase('cat')); // returns 'CAT'
+//   console.log(makeUpperCase('DoG')); // returns 'DOG'
+//   console.log(makeUpperCase('CODEUP')); // returns 'CODEUP'
+//   console.log(makeUpperCase(54)); // returns false
+//   console.log(makeUpperCase(true)); // returns false
+//   console.log(makeUpperCase(null)); // returns false
 
 
 </script>
