--- a/loops.html
+++ b/loops.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Loops Lecture</h1>
 <script src = "js/for_loops.js"></script>
+<script src = "js/break_and_continue.js"></script>
 
 <script>
 
