--- a/loops.html
+++ b/loops.html
@@ -8,6 +8,7 @@
 <h1>Loops Lecture</h1>
 <script src = "js/for_loops.js"></script>
 <script src = "js/break_and_continue.js"></script>
+<script src = "js/while.js"></script>
 
 <script>
 
