completed array manipulation exercises with class walk thru solutions

--- a/planets-js.html
+++ b/planets-js.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <script src = "js/planets-array.js"></script>
+
+    Mercury<br/>Venus<br/>Earth<br/>Mars<br/>Jupiter<br/>Saturn<br/>Uranus<br/>Neptune
+
+
 </body>
 </html>
