--- a/js/welcome.html
+++ b/js/welcome.html
@@ -2,9 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello, World!</title>
+    <title>Veridian Dynamics</title>
 </head>
 <body>
+<h1 id ="top">Welcome to Veridian Dynamics!</h1>
+At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<strong><em> technology.</em></strong>
+<hr>
+<article>
+<h2>Core Values</h2>
+    <section>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+    </section>
+<h2>Our Process</h2>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<h2>2020 Vision</h2>
+<ol>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 30%</li>
+</ol>
+</article>
+<hr>
+<h3>Company Vision</h3>
 
+<img src="../img/maldives-beach.jpg" height="250" width="330"/>
+
+<img src="../img/tech-space.jpg" height="200" width="330"/>
+
+<img src="../img/borealis-icehotel.jpg" height="250" width="330"/>
+
+<img src="../img/river-in-valley.jpg" height="250" width="330"/>
+<h3>Our Product</h3>
+<table>
+    <tr>
+    <th><strong>Plan</strong></th>
+    <th><strong>Price</strong></th>
+    <th><strong>Features</strong></th>
+    </tr>
+
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
+<br>
+<em>All products come with our quality guarantee™.</em>
+<br><br>
+<a href="#top">Go to the top of the page,</a>
 </body>
 </html>
