--- a/js/welcome.html
+++ b/js/welcome.html
@@ -31,6 +31,7 @@ At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<stro
 </ol>
 </article>
 <hr>
+<article>
 <h3>Company Vision</h3>
 
 <img src="../img/maldives-beach.jpg" height="250" width="330"/>
@@ -41,6 +42,7 @@ At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<stro
 
 <img src="../img/river-in-valley.jpg" height="250" width="330"/>
 <h3>Our Product</h3>
+    <section>
 <table>
     <tr>
     <th><strong>Plan</strong></th>
@@ -66,9 +68,12 @@ At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<stro
         <td>Unlimited Support</td>
     </tr>
 </table>
-<br>
+    </section>
+</article><br>
+<footer>
 <em>All products come with our quality guarantee™.</em>
-<br><br>
+<br>
 <a href="#top">Go to the top of the page,</a>
+</footer>
 </body>
 </html>
