--- a/github.html
+++ b/github.html
@@ -51,9 +51,12 @@
 </section>
 <footer>
     <nav>
-        Terms Privacy Security Status Help <br>
-        Contact API Training
-        <!--Was told by peers yesterday that links were unnecessary but will add later for more practice -->
+        <ahref ="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">  Terms  </a>
+        </ahref> <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">  Privacy  </a>
+        <a href = "https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">  Status  </a>
+        <a href ="https://docs.github.com/en">Help</a>
+        <a href = "https://support.github.com/?tags=dotcom-footer">  Contact  </a><a href ="https://docs.github.com/en">API</a>
+        <a href="https://github.com/services/">  Training  </a>
     </nav>
 </footer>
 </body>
