Moved html exercise to codeup-web-exercises folder

--- a/welcome.html
+++ b/welcome.html
@@ -34,13 +34,13 @@ At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<stro
 <article>
 <h3>Company Vision</h3>
 
-<img src="../img/maldives-beach.jpg" height="250" width="330"/>
+<img src="img/maldives-beach.jpg" height="250" width="330"/>
 
-<img src="../img/tech-space.jpg" height="200" width="330"/>
+<img src="img/tech-space.jpg" height="200" width="330"/>
 
-<img src="../img/borealis-icehotel.jpg" height="250" width="330"/>
+<img src="img/borealis-icehotel.jpg" height="250" width="330"/>
 
-<img src="../img/river-in-valley.jpg" height="250" width="330"/>
+<img src="img/river-in-valley.jpg" height="250" width="330"/>
 <h3>Our Product</h3>
     <section>
 <table>
