rearranged semantic elements according to class walk thru

--- a/github.html
+++ b/github.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>GitHub HTML Exercise</title>
 </head>
+
 <body>
 <header>
-<img src="http://placeholder.pics/svg/30">
+<img src="http://placeholder.pics/svg/30" alt="github logo">
 <nav>
     <ul>
         <li><a href ="https://github.com/pulls">Pull requests</a></li>
@@ -15,8 +16,9 @@
         <li><a href="https://github.com/explore">Explore</a></li>
     </ul>
 </nav><br>
-    <img src="http://placeholder.pics/svg/30">
+    <img src="http://placeholder.pics/svg/30" alt="codeup logo">
 </header>
+
 <header><h4>Codeup</h4></header>
 <nav>
     <ul>
@@ -27,37 +29,48 @@
         <li><a href="https://github.com/settings/profile">Settings</a> 39</li>
     </ul>
 </nav>
+
 <section>
     <header>
         Codeup's dev team
     </header>
    <main>
+       <span>
        <img src="https://fer-uig.glitch.me?uuid=412" alt="user-icon" />
        Kent Beck<br>
        KentBeck<br>
        Member<br>
        X team members<br>
+       </span>
+       <span>
        <img src="https://fer-uig.glitch.me?uuid=909" alt="user-icon" />
        Codeup Staff<br>
        CodeupStaff<br>
        Member<br>
        X team members<br>
+       </span>
+       <span>
        <img src="https://fer-uig.glitch.me?uuid=131" alt="user-icon" />
        Martin F<br>
        Member<br>
        X team members<br>
+       </span>
    </main>
-    <footer> © 2018 Github. Inc.</footer>
 </section>
+
 <footer>
+     © 2018 Github. Inc.
+
     <nav>
-        <ahref ="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">  Terms  </a>
-        </ahref> <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">  Privacy  </a>
+        <a href ="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service">  Terms  </a>
+        <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">  Privacy  </a>
         <a href = "https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">  Status  </a>
-        <a href ="https://docs.github.com/en">Help</a>
-        <a href = "https://support.github.com/?tags=dotcom-footer">  Contact  </a><a href ="https://docs.github.com/en">API</a>
+        <a href ="https://docs.github.com/en">Help</a><br>
+        <a href = "https://support.github.com/?tags=dotcom-footer">  Contact  </a>
+        <a href ="https://docs.github.com/en">API</a>
         <a href="https://github.com/services/">  Training  </a>
     </nav>
 </footer>
+
 </body>
 </html>
