--- a/welcome.html
+++ b/welcome.html
@@ -5,75 +5,96 @@
     <title>Veridian Dynamics</title>
 </head>
 <body>
-<h1 id ="top">Welcome to Veridian Dynamics!</h1>
-At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<strong><em> technology.</em></strong>
+
+<header>
+<h1 id="top">Welcome to Veridian Dynamics!</h1>
+<p>At Veridian Dynamics,<strong> we</strong> solve <em>your</em> problems with<strong><em> technology.</em></strong></p>
+</header>
+
 <hr>
-<article>
-<h2>Core Values</h2>
+<main>
     <section>
-<ul>
-    <li>Competence</li>
-    <li>Involvement</li>
-    <li>Technology</li>
-</ul>
+    <h2>Core Values</h2>
+
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
     </section>
-<h2>Our Process</h2>
-<ol>
-    <li>Plan</li>
-    <li>Evaluate</li>
-    <li>Implement</li>
-</ol>
-<h2>2020 Vision</h2>
-<ol>
-    <li>Become #1 in Technology</li>
-    <li>Increase Success by 20%</li>
-    <li>Increase Business by 30%</li>
-</ol>
-</article>
+
+    <section>
+    <h2>Our Process</h2>
+    <ol>
+        <li>Plan</li>
+        <li>Evaluate</li>
+        <li>Implement</li>
+    </ol>
+    </section>
+
+    <section>
+    <h2>2020 Vision</h2>
+    <ul>
+        <li>Become #1 in Technology</li>
+        <li>Increase Success by 20%</li>
+        <li>Increase Business by 30%</li>
+    </ul>
+    </section>
+
 <hr>
-<article>
-<h3>Company Vision</h3>
+<section>
+    <h3>Company Vision</h3>
+    <div>
+        <img src="img/maldives-beach.jpg" height="250" width="330"/>
 
-<img src="img/maldives-beach.jpg" height="250" width="330"/>
+        <img src="img/tech-space.jpg" height="200" width="330"/>
+    </div>
+    <div>
+        <img src="img/borealis-icehotel.jpg" height="250" width="330"/>
 
-<img src="img/tech-space.jpg" height="200" width="330"/>
+        <img src="img/river-in-valley.jpg" height="250" width="330"/>
+    </div>
+</section>
 
-<img src="img/borealis-icehotel.jpg" height="250" width="330"/>
-
-<img src="img/river-in-valley.jpg" height="250" width="330"/>
-<h3>Our Product</h3>
     <section>
-<table>
-    <tr>
-    <th><strong>Plan</strong></th>
-    <th><strong>Price</strong></th>
-    <th><strong>Features</strong></th>
-    </tr>
+    <h3>Our Product</h3>
 
-    <tr>
-        <td>Starter</td>
-        <td>$99</td>
-        <td>Base Technology</td>
-    </tr>
-
-    <tr>
-        <td>Advanced</td>
-        <td>$199</td>
-        <td>Additional Features</td>
-    </tr>
-
-    <tr>
-        <td>Premium</td>
-        <td>$499</td>
-        <td>Unlimited Support</td>
-    </tr>
-</table>
+        <table>
+            <thead>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advanced</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+            </tbody>
+        </table>
     </section>
-</article><br>
-<footer>
-<em>All products come with our quality guarantee™.</em>
+
+</main>
 <br>
-<a href="#top">Go to the top of the page,</a>
+<footer>
+    <p>
+    <em>All products come with our quality guarantee™.</em>
+    </p>
+    <br>
+   <h4><a href="#top">Go to the top of the page,</a></h4>
 </footer>
 </body>
 </html>
