finished selectors, stylesheet, and html exercises for veridian dynamics.

--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -43,20 +46,20 @@
     </section>
 
 <hr>
-<section>
+<section class="images">
     <h3>Company Vision</h3>
     <div>
-        <img src="img/maldives-beach.jpg" height="250" width="330"/>
+        <img src="img/maldives-beach.jpg"/>
 
-        <img src="img/tech-space.jpg" height="200" width="330"/>
+        <img src="img/tech-space.jpg"/>
     </div>
     <div>
-        <img src="img/borealis-icehotel.jpg" height="250" width="330"/>
+        <img src="img/borealis-icehotel.jpg"/>
 
-        <img src="img/river-in-valley.jpg" height="250" width="330"/>
+        <img src="img/river-in-valley.jpg"/>
     </div>
 </section>
-
+<hr>
     <section>
     <h3>Our Product</h3>
 
