--- a/messages.html
+++ b/messages.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Message component</title>
-  <link rel="stylesheet" href="css/messages.css">
+  <link rel="stylesheet" href="../css/messages.css">
 </head>
 <body>
-<div class="message message-info">
+<div class="message-info">
   An informational message
 </div>
-<div class="message message-success">
+<div class="message-success">
   A success message
 </div>
-<div class="message message-warning">
+<div class="message-warning">
   A warning message
 </div>
-<div class="message message-error">
+<div class="message-error">
   An error message
 </div>
 
