added js june 20 warmup

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -9,13 +9,11 @@
 <script>
   "use strict";
 
-
-
-   /** Write a function, addTen, that takes in an input. If the input is a number,
-    return the input plus ten and false otherwise.
-
-    Examples:
-*/
+//    /** Write a function, addTen, that takes in an input. If the input is a number,
+//     return the input plus ten and false otherwise.
+//
+//     Examples:
+// */
 
 // //testing the (function(userInput), expected outcome);
 //   console.log(addTen(0), 10); // returns 10
@@ -71,6 +69,43 @@
 //   console.log(sumIsEqual(2, 2, 6));
 //   console.log(sumIsEqual(4, 50, 2));
 //   console.log(sumIsEqual('5', '2', '9'));
+
+
+  // JS Warmup June 20 Tuesday
+
+  // Write a function, returnUserObject, that takes in three String arguments: a username, password, and email. The function should return a user object with username, password and email properties.
+  //
+  // returnUserObject('jreich', 'password123', 'jreich@email.com') // returns...
+  //
+  // {
+  //   username: 'jreich',
+  //           password: 'password123',
+  //         email: 'jreich@email.com'
+  // }
+  //
+  // Assume all inputs are non-empty strings. The order of the properties does not matter.
+
+  // function returnUserObject(username, password, email) {
+  //   // return {
+  //   //   username,
+  //   //   password,
+  //   //   email
+  //   // }
+  //   //
+  //   // const user = {}
+  //   // user.username = username;
+  //   // user.password = password;
+  //   // user.email = email;
+  //   // return user;
+  //
+  //  // return {
+  //  //   username: username,
+  //  //   password: password,
+  //  //   email: email
+  //  // }
+  // }
+
+  // console.log(returnUserObject('jreich', 'password123', 'jreich@email.com'));
 
 </script>
 
