--- a/media-queries-audrey-soln.html
+++ b/media-queries-audrey-soln.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Media Queries</title>
-    <link rel="stylesheet" href="css/media-queries-audrey-soln.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/resets.css">
+    <link rel="stylesheet" href="css/media-queries-audrey-soln.css">
 
 </head>
-<body class="page-wrapper">
-<div class="container">
-    <header class="row heading">
-        <div class="column alert-info hidden-on-desktop">
-            <a href="#main">Skip to main content</a>
+<body>
+<div class="page-wrapper">
+    <div class="container alert-info hidden-on-desktop justify-center">
+        <div class="row">
+            <div class="column skip">
+                <a class="skip-button" href="#main">Skip to main content</a>
+            </div>
         </div>
-        <h1 class="column company-name">Company</h1>
-    <nav class="nav-bar row">
-        <ul class="nav-elements column nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    </div>
+    <header class="container sprinkles">
+        <div class="row">
+            <div class="column">
+                <h1 class="company-name">Company</h1>
+            </div>
+            <nav class="nav-bar column">
+                <ul class="nav-elements nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <div class="row header-img">
-        <img src="img/maldives-beach.jpg" alt="beach-picture">
+    <div class="container hero">
+        <div class="row header-img">
+            <div class="column">
+                <img src="img/maldives-beach.jpg" alt="beach-picture">
+            </div>
+        </div>
     </div>
-    <div class="main-text-block row">
-    <section id="main" class="main-section column">
-        <h2 class="column main-heading">Main Section</h2>
-        <p class="column main-text">Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto
-            harum, non. Accusantium
-            sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente
-            in?</p>
-    </section>
-    <section class="sub-section column">
-        <h2 class="column sub-heading">Sub-section</h2>
-        <p class="column sub-text">Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde
-            minima aspernatur harum
-            cum
-            totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-    </section>
-    </div>
-</div>
-<footer class="row">
-    <p class="column">(c) 2017 All rights reserved</p>
-    <div id="social-media-links">
+    <div class="container main">
+        <div class="row gap-25">
+            <section id="main" class="column">
+                <h2 class="main-heading">Main Section</h2>
+                <p class="main-text">Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi
+                    commodi,
+                    iusto
+                    harum, non. Accusantium
+                    sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores
+                    sapiente
+                    in?</p>
+            </section>
+            <section class="sub-section column">
+                <h2 class="sub-heading">Sub-section</h2>
+                <p class="sub-text">Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat
+                    architecto
+                    unde
+                    minima aspernatur harum
+                    cum
+                    totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+            </section>
 
+        </div>
     </div>
-</footer>
+
+    <footer class="container">
+        <div class="row">
+            <p class="column">(c) 2017 All rights reserved</p>
+            <div id="social-media-links">
+
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
