created bootstrap practice pizza website html and css stylesheet

--- a/bootstrap-intro.html
+++ b/bootstrap-intro.html
@@ -72,7 +72,7 @@
     <img class="d-block mx-auto mb-4" src="img/antelope-canyon.jpg" alt="the roommates">
     <h1 class="display-5 fw-bold text-body-emphasis">And They Were Roommates</h1>
     <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Two un-expecting individuals going through their quarter-life crisis moved into their friend's house in 2021. They quickly learned more about each other and became best friends! Their spiritual paths intertwined and was the topic of conversation among their mutual friends.</p>
+        <p class="lead mb-4">Two un-expecting individuals going through their quarter-life crisis moved into their friend's house in 2021. They quickly learned more about each other and became best friends! Their spiritual paths intertwined and that's how they are roommates.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Listen to their Podcast</button>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Connect with the Community</button>
