--- a/js-warmups.html
+++ b/js-warmups.html
@@ -132,20 +132,83 @@
   //   return product;
   // }
 
-  let product = 1;
- function returnProduct(nums) {
-   for(let i = 0; i < nums.length; i+=1) {
-     product *= nums[i];
- }
-   return product;
-  }
+ //  let product = 1;
+ // function returnProduct(nums) {
+ //   for(let i = 0; i < nums.length; i+=1) {
+ //     product *= nums[i];
+ // }
+ //   return product;
+ //  }
+ //
+ //
+ //  console.log(returnProduct([1, 2, 3]), "6");
+ //  console.log(returnProduct([3, 3, 3]), "27");
+ //  console.log(returnProduct([4, 1, 2]), "8");
+ //  console.log(returnProduct([4, 0, 2]), "0");
+ //  console.log(returnProduct([5, 3, 2]), "30");
+
+// June 26, 2023 Monday
+//   Create a function, returnTotalSales, that takes in an array of sales data objects and returns the sum of all
+//   totalItemsSold properties. Assume all elements in the input array are valid sales data objects with a totalItemsSold
+//   property.
+
+  //         EXAMPLE...
+
+  const salesData = [
+    {
+      month: 'January',
+      totalItemsSold: 0
+    },
+    {
+      month: 'February',
+      totalItemsSold: 5
+    },
+    {
+      month: 'March',
+      totalItemsSold: 2
+    },
+    {
+      month: 'April',
+      totalItemsSold: 10
+    },
+    {
+      month: 'May',
+      totalItemsSold: 30
+    }
+  ];
+  //Audrey's attempt with For Loop
+//   let sum = 0
+// function returnTotalSales(salesData) {
+//  for (let i = 0; i < salesData.length; i += 1) {
+//     sum += salesData[i].totalItemsSold;
+//   }
+//  return sum;
+//   }
+
+//Class Walk Thru (works only if you know how many elements available)
+//   function returnTotalSales(salesData) {
+//   const total = salesData[0].totalItemsSold +
+//           salesData[1].totalItemsSold +
+//     salesData[2].totalItemsSold +
+//     salesData[3].totalItemsSold +
+//     salesData[4].totalItemsSold;
+//   return total;
+//   }
+
+// For Each Loop Class Walk Thru
+// let sum = 0
+//   salesData.forEach(element => {
+//     sum += element.totalItemsSold;
+//
+//   });
+//   return sum;
+
+  // console.log(returnTotalSales(salesData)); // returns 47
 
 
-  console.log(returnProduct([1, 2, 3]), "6");
-  console.log(returnProduct([3, 3, 3]), "27");
-  console.log(returnProduct([4, 1, 2]), "8");
-  console.log(returnProduct([4, 0, 2]), "0");
-  console.log(returnProduct([5, 3, 2]), "30");
+
+
+
 
 
 
