completed june 28 js array warmup

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -213,28 +213,28 @@
 //
 //           EXAMPLE...
 //
-  const salesData = [
-    {
-      month: 'January',
-      totalItemsSold: 0
-    },
-    {
-      month: 'February',
-      totalItemsSold: 5
-    },
-    {
-      month: 'March',
-      totalItemsSold: 2
-    },
-    {
-      month: 'April',
-      totalItemsSold: 10
-    },
-    {
-      month: 'May',
-      totalItemsSold: 30
-    }
-  ];
+//   const salesData = [
+//     {
+//       month: 'January',
+//       totalItemsSold: 0
+//     },
+//     {
+//       month: 'February',
+//       totalItemsSold: 5
+//     },
+//     {
+//       month: 'March',
+//       totalItemsSold: 2
+//     },
+//     {
+//       month: 'April',
+//       totalItemsSold: 10
+//     },
+//     {
+//       month: 'May',
+//       totalItemsSold: 30
+//     }
+//   ];
 
   //audrey's solution
 // let totalSales = 0
@@ -256,6 +256,79 @@
 //
 //
 //     console.log(returnAvgSales(salesData)); // returns 9.4
+
+  // June 28 wednesday JS warmup
+  // Create a function, returnAdmins, that takes in an array of user objects
+  // and returns an array of only the admin user objects. Assume the array
+  // has at least one user object and all elements have an isAdmin property.
+  //
+  // //         Example:
+  //
+  //
+  // const users = [
+  //
+  //   {
+  //     username: 'fred123',
+  //     password: 'letmein',
+  //     email: 'fred123@email.com',
+  //     isAdmin: true
+  //   },
+  //   {
+  //     username: 'cindy123',
+  //     password: 'hello123',
+  //     email: 'cindy123@email.com',
+  //     isAdmin: false
+  //   },
+  //   {
+  //     username: 'kathy123',
+  //     password: 'letmein',
+  //     email: 'kathy123@email.com',
+  //     isAdmin: true
+  //   },
+  //   {
+  //     username: 'kyle123',
+  //     password: 'letmein',
+  //     email: 'kyle123@email.com',
+  //     isAdmin: false
+  //   }
+  // ];
+  //
+  // function returnAdmins(users) {
+  //   const admins = [];
+  //   //creating empty array to push objects to
+  //   for (let i = 0; i < users.length; i += 1 ) {
+  //     if (users[i].isAdmin === true) {
+  //       admins.push(users[i]);
+  //       // this will push the users object to const admins
+  //     }
+  //           } // needs to return the objects that have been pushed
+  //   return admins;
+  // }
+  //
+  // console.log(returnAdmins(users));
+
+  /*
+
+  returnAdmins(users) returns...
+
+  [
+
+      {
+          username: 'fred123',
+          password: 'letmein',
+          email: 'fred123@email.com',
+          isAdmin: true
+      },
+      {
+          username: 'kathy123',
+          password: 'letmein',
+          email: 'kathy123@email.com',
+          isAdmin: true
+      }
+  ]
+
+  */
+
 
 
 
