got search button to fit text in box

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -21,7 +21,7 @@
                     <li><a href="#" class="menu-tab nav-link px-2 text-secondary">Menu</a></li>
                 </ul>
 
-                <form class="search-box m-2 me-lg-auto d-flex" role="search">
+                <form class="search-box m-2 me-lg-auto d-flex h-50" role="search">
                     <input type="search" class="search-bar form-control form-control-dark text-bg-light"
                            placeholder="Zip Code"
                            aria-label="Search">
